# huffman-text-compression

./: .gitignore  CMakeLists.txt  README.md
include/: heap.h  huffmantree.h
src/: heap.cpp  huffman.cpp  main.cpp
